# skills

./: .editorconfig  .evolve.json  .gitignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  .release-please-manifest.json  AGENTS.md  EVALUATION.md  LICENSE  Makefile  README.md  go.work  go.work.sum  install.sh  package-lock.json  package.json  release-please-config.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yaml
.github/codeql/: codeql-config.yaml
.github/workflows/: add-to-project.yaml  auto-merge.yml  ci.yaml  ci.yml  codeql.yaml  dependabot-merge.yaml  dependabot-merge.yml  evals.yml  merge-notice.yaml  merge-notice.yml  merge-review-ack.yaml  merge.yaml  merge.yml  release.yaml  security.yaml
evals-results/: .token-count-cache.json  cases-go-project.json  cases-go-release.json  cases-go-style.json  cases-go-testing.json  cases-terraform-module.json  cases-terraform-style.json  cases-terraform-validate.json  triggers-go-project.json  triggers-go-release.json  triggers-go-style.json  triggers-go-testing.json  triggers-terraform-module.json  triggers-terraform-style.json  triggers-terraform-validate.json
plugins/actions/: CHANGELOG.md
plugins/dotnet/: EVALUATION.md
plugins/golang/: CHANGELOG.md  EVALUATION.md
plugins/python/: CHANGELOG.md  EVALUATION.md
plugins/python/skills/python-project/templates/: Makefile  __main__.py  pyproject.toml
plugins/terraform/: CHANGELOG.md  EVALUATION.md
plugins/workflow/: CHANGELOG.md  EVALUATION.md
scripts/: check-skills.sh
tools/: README.md  go.mod  go.sum
tools/eval/: providers.py  report.py  (+3 more)
(+169 files in other folders)
